chore: update metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage="https://git.sr.ht/~meow_king/read-secret"
 repository = "https://git.sr.ht/~meow_king/read-secret"
 readme = "README.md"
 documentation="https://docs.rs/read-secret"
-keywords = ["dev", "secret", "development", "env", "gpg", "decrypt"]
+keywords = ["dev", "secret", "development", "env", "gpg"]
 categories = ["development-tools"]
 
 
